--- a/index.html
+++ b/index.html
@@ -2,42 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://db.onlinewebfonts.com/c/c4f0e73a2f65ce98daaf73645f6bdfd8?family=Architype+Albers+W00"
-        rel="stylesheet">
-    <link href="https://db.onlinewebfonts.com/c/c4f0e73a2f65ce98daaf73645f6bdfd8?family=Architype+Albers+W00"
-        rel="stylesheet">
-    <script src="assets/js/script.js" defer></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>SRD Energy Technologies</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Swiper CSS -->
+    <meta name="description"
+        content="SRD Energy Technologies - High Powered Ultra Fast Chargers and Marine Energy Solutions." />
+
+    <!-- Custom Fonts -->
+    <link href="https://db.onlinewebfonts.com/c/c4f0e73a2f65ce98daaf73645f6bdfd8?family=Architype+Albers+W00"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- CSS Libraries -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
-    <!-- Swiper JS -->
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon" />
+
+    <!-- JS Libraries (Load after CSS for faster render) -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- index.html head içine ekle -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
+    <!-- Custom JS -->
+    <script src="assets/js/script.js" defer></script>
 </head>
+
 
 <body>
 
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <!-- HEADER SECTION -->
     <header class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
@@ -117,8 +124,6 @@
             </div>
         </div>
     </nav>
-
-
     <!-- /HEADER SECTION -->
 
 
