--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>SRD Energy Technologies</title>
+    <title>Home - SRD Energy Technologies</title>
     <meta name="description"
         content="SRD Energy Technologies - High Powered Ultra Fast Chargers and Marine Energy Solutions." />
 
@@ -43,8 +43,6 @@
 
 
 <body>
-
-
 
     <!-- HEADER SECTION -->
     <header class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
@@ -139,7 +137,7 @@
     <section id="Introduction" class="scrollReveal py-16 bg-white space-y-24 mb-14 lg:mb-24">
         <!-- 1. Bölüm -->
         <div class="text-center mb-12  " id="about">
-            <h2 class="text-4xl md:text-6xl font-bold text-[#006c8b] leading-snug">
+            <h2 class="text-4xl md:text-6xl font-bold text-[#006c8b] leading-snug mt-10">
                 High Powered Ultra Fast Chargers<br> for Electric Boats & Yachts
             </h2>
             <p class="mt-6 max-w-3xl mx-auto text-[#006c8b] text-2xl leading-relaxed">
@@ -791,7 +789,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8"
                                     d="M3 8l9 6 9-6M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <a href="mailto:info@srdenergy.com" class="hover:underline">info@srdenergy.com</a>
+                            <a href="mailto:demir@srdenergy.tech" class="hover:underline">demir@srdenergy.tech</a>
                         </div>
 
                         <div class="flex items-center gap-4">
@@ -842,7 +840,7 @@
                     SRD Energy Technologies <br>
                     Germany <br>
                     +49 157 513 025 41 <br>
-                    <a href="mailto:info@srdenergy.com" class="hover:underline">info@srdenergy.com</a>
+                    <a href="mailto:demir@srdenergy.tech" class="hover:underline">demir@srdenergy.tech</a>
                 </p>
             </div>
 
